# server/server.go
@@ -878,11 +878,15 @@ func (repman *ReplicationManager) AddFlags(flags *pflag.FlagSet, conf *config.Co
 	flags.StringVar(&conf.Cloud18CostCurrency, "cloud18-cost-currency", "", "Cost currency")
 	flags.StringVar(&conf.Cloud18DbOps, "cloud18-dbops", "", "Email for infrastucure dba")
 	flags.StringVar(&conf.Cloud18ExternalDbOps, "cloud18-external-dbops", "", "Email for external partner dba")
+	flags.StringVar(&conf.Cloud18ExternalDbOpsStatus, "cloud18-external-dbops-status", "", "Status for external dbops subscription, default empty. Valid values: [pending|active|expired]")
 	flags.StringVar(&conf.Cloud18ExternalSysOps, "cloud18-external-sysops", "", "Email for external partner sysadmin")
+	flags.StringVar(&conf.Cloud18ExternalSysOpsStatus, "cloud18-external-sysops-status", "", "Status for external sysadmin subscription, default empty. Valid values: [pending|active|expired]")
 	flags.StringVar(&conf.Cloud18InfraCertifications, "cloud18-infra-certifications", "", "The type of auditing certificats made on the infrastructure")
 	flags.StringVar(&conf.Cloud18SalesSubscriptionScript, "cloud18-sales-subscription-script", "", "Script when user subscribe to the cloud18 service")
 	flags.StringVar(&conf.Cloud18SalesSubscriptionValidateScript, "cloud18-sales-subscription-validate-script", "", "Script when admin validate the subscription")
 	flags.StringVar(&conf.Cloud18SalesUnsubscribeScript, "cloud18-sales-unsubscribe-script", "", "Script when user unsubscribe to the cloud18 service")
+	flags.StringVar(&conf.Cloud18SalesExternalOpsValidateScript, "cloud18-sales-external-ops-validate-script", "", "Script when admin validate external ops")
+	flags.StringVar(&conf.Cloud18SalesExternalOpsStopScript, "cloud18-sales-external-ops-stop-script", "", "Script when partnership with external ops ended")
 	if WithProvisioning == "ON" {
 		flags.StringVar(&conf.ProvDatadirVersion, "prov-db-datadir-version", "10.2", "Empty datadir to deploy for localtest")
 		flags.StringVar(&conf.ProvDiskSystemSize, "prov-db-disk-system-size", "2", "Disk in g for micro service VM")
